[package]
name = "symbol-table"
version = "0.1.0"
edition = "2021"
description = "Symbol table implementation with hash consing, interning, and scope management for compiler infrastructure"
license = "MIT"
repository = "https://github.com/SuperInstance/symbol-table"
keywords = ["symbol", "table", "interning", "compiler", "hash-cons"]
categories = ["data-structures", "development-tools"]

[dependencies]
